# cpp-grpc-communication

./: CMakeLists.txt  README.md
CMakeModules/: Abseil.cmake  gRPC.cmake
client/: CMakeLists.txt  main.cpp
protos/: CMakeLists.txt
server/: CMakeLists.txt  main.cpp
